day12-prometheus-grafana/k8s/sample-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twd-frontend-ingress
  namespace: sample-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: twd-frontend-svc
                port:
                  number: 80
